# leo

./: .dockerignore  .gitignore  Cargo.toml  LICENSE  README.md  docker-compose.yml
api/: Cargo.toml  Dockerfile
api/src/: main.rs
backend/: Cargo.toml  Dockerfile
front/: Cargo.toml
frontend/: Dockerfile
