[package]
name = "leo-api"
version = "0.1.0"
authors = ["Hiroyasu Yamada <dyama.h@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0"
actix-rt = "1.0"
serde = "*"
lindera-ipadic = "0.7.1"
lindera = "0.7.1"
lindera-core = "0.7.1"
